<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Navigation UHK</string>
    <string name="action_settings">Nastavení</string>
    <string name="action_list">Seznam fingerprintů</string>
    <string name="write_point">Zapsat Fingerprint</string>
    <string name="title_activity_list_positions">List of Positions</string>
    <string name="hello_world">Hello world!</string>
    <string name="find">Wifi hledání</string>
    <string name="find_ble">BLE hledání</string>
    <string name="action_download">Stáhnout DB</string>
    <string name="action_upload">Nahrát DB</string>
    <string name="title_activity_position_info">Informace</string>
    <string name="title_activity_login">Přihlášení uživatele</string>
    <string name="title_activity_primary">Navigation UHK</string>

    <string name="title_level1">Patro 1</string>
    <string name="title_level2">Patro 2</string>
    <string name="title_level3">Patro 3</string>
    <string name="title_level4">Patro 4</string>
    <string name="title_collector_mode">Mód sběru dat</string>
    <string name="title_find">Najdi pozici</string>
    <string name="title_download_db">Stáhnout DB</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Hledej</string>

</resources>
